# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "CSE341 Web Services API for managing movies and reviews with MongoDB",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "movies-api-j8pw.onrender.com",
   "basePath": "/",
   "tags": [
     {
@@ -22,8 +22,8 @@
     }
   ],
   "schemes": [
-    "http",
-    "https"
+    "https",
+    "http"
   ],
   "paths": {
     "/": {
